--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
     },
     "authors": [
         {
-            "name": "Lean-98",
-            "email": "leanfrag23@gmail.com"
+            "name": "Lean-98"
         }
     ],
     "require": {
-        "phpmailer/phpmailer": "^6.6"
+        "phpmailer/phpmailer": "^6.6",
+        "vlucas/phpdotenv": "^5.4"
     }
 }
