--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
-vendor/
-node_modules/
-# gulpfile.js
-# package.json
-# package-lock.json
+/vendor/
+/node_modules/
+/src/
 .env
+.env.local
+.env.development
+.env.test
+.env.production
+.env.staging
 
